# algorithm

./: .clang-format  .editorconfig  .gitignore  404.html  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  babel.config.json  babel.js  build.js  build.py  build.sh  cmaker.sh  docker-compose.yml  eslint.config.mjs  go.mod  index.html  index.txt  knapsack.html  knapsack.txt  launch.jsonc  main.js  main.py  meson.build  monorepo.sh  package.json  pnpm-lock.yaml  prototype.html  prototype.txt  pyproject.toml  rush.json  shims.d.ts  tsconfig.json  union-find.html  union-find.txt
.github/workflows/: codeql.yml
.husky/: pre-commit
.trae/rules/: index.md
apps/next-demo/: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
assembly/: index.ts
cc/: dfs.cc  main.cc
common/scripts/: install-run.js
cpp/: main.cpp  main.hpp
demo/: CMakeLists.txt
demo/src/: main.cpp  main.hpp
demos/next/: README.md  api.sh  mdx-components.tsx  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
demos/react-vitest/: package.json  pnpm-lock.yaml
docs/: union-find.md
hot100/: 17.cpp  207.cpp  208.ts  239.cpp  78.cpp  994.cpp
mini-vue/: README.md  bundle.cc  bundle.go  bundle.js
py/: quick_sort.py
src/: App.tsx  App.vue  App2.tsx  Layout.tsx  ctx.ts  index.cjs  index.html  index.js  index.py  index.ts  index.tsx  index2.py  main.cc  main.cpp  main.css  main.go  main.hpp  main.js  main.py  main.sh  main.ts  meson_install_script.py  meson_setup.py  priority_queue.ts  server.ts  solution.cc  solution.js  solution.py  solution.ts  worker.js
src/acm/: 5657a.cts  5657a.ts  5657b.ts  main.py
src/agents/: bytedance-data-arch.md
src/array/: km44.go  km44.py  km58.ts  lc209.cc  lc26.cc  lc26.go  lc27.py  lc283.cc  lc283.go  lc54.ts  lc59.cc  lc59.cpp  lc76.go  lc76.py  lc844.cc  lc844.go  lc904.ts  lc977.cc  quick-sort.cc  quick-sort.ts
src/assets/: index.html
src/backtrack/: lc131.py  lc17.py  lc216.py  lc39.py  lc40.py  lc46.py  lc47.py  lc473.js  lc473.py  lc491.py  lc51.py  lc77.py  lc78.py  lc90.py  lc93.py
src/binary-search/: lc34.cc  lc35.cc  lc367.cc  lc436.ts  lc69.cc  lc704.cc  main.ts
src/binary-tree/: lc100.ts  lc101.py  lc102.cc  lc104.py  lc106.cc  lc107.cc  lc110.py  lc111.py  lc112.cc  lc116.py  lc117.py  lc144.cc  lc145.cc  lc199.cc  lc222.py  lc226.py  lc257.py  lc404.py  lc429.py  lc513.py  lc515.py  lc559.py  lc572.py  lc637.cc  lc654.go  lc654.ts  lc94.cc
src/binary_search/: lc436.ts  lc704.cpp
src/cc/: heap.cc  main.cc  quick_sort.cc  quicksort.cc
src/demos/: bfc.html  mobx.ts  module.tsx
src/design-pattern/: README.md  abstract-factory.py  adapter.cc  factory-method.py  factory-method.ts  km-abstract-factory.py  km-adapter.py  km-bridge.py  km-chain-of-responsibility.py  km-command.py  km-composite.py  km-decorator.py  km-facade.py  km-factory-method.py  km-flyweight.py  km-interpreter.py  km-iterator.py  km-mediator.py  km-memento.py  km-observer.py  km-prototype.cc  km-prototype.py  km-prototype2.cc  km-proxy.py  km-simple-factory.py  km-singleton.js  km-singleton.py  km-singleton.ts  km-state.py  km-stratepy.py  km-template-method.py  km-visitor.py  prototype.cc  prototype2.cc  proxy.cc  simple-factory.py
src/diff-array/: README.md  lc1094.py  lc2132.ts  lc2536.ts  lc3347.py  lc3347.ts
src/dp/: lc1035.py  lc1143.py  lc115.py  lc121.ts  lc122.py  lc123.ts  lc188.py  lc198.py  lc213.cc  lc2435.py  lc300.py  lc309.py  lc337.cc  lc337.ts  lc343.js  lc343.py  lc392.py  lc5.ts  lc509.ts  lc53.py  lc583.py  lc62.py  lc63.py  lc647.ts  lc674.py  lc70.ts  lc714.py  lc718.py  lc72.py  lc746.py  lc96.cc  lc96.js  longest-common-subsequence.ts
src/floyd/: main.ts
src/go/: README.md  atomicCounter.go  channelBuffering.go  channelDirection.go  defer.go  embedDirective.go  goroutine.go  helloWorld.go  httpClient.go  logging.go  main.go  rangeOverChannel.go  rangeOverIterator.go  recover.go  select.go  sortingByFunction.go  ticker.go  waitGroup.go
src/go-by-example/: README.md  array.go  atomic.go  chan.go  chan_close.go  chan_direction.go  chan_operation.go  chan_range.go  chan_sync.go  cmd_arg.go  cmd_flag.go  context.go  custom_error.go  defer.go  embed_directive.go  embed_struct.go  env.go  error.go  exec_process.go  for.go  function.go  generics.go  goroutine.go  goroutine2.go  http_client.go  http_server.go  interface.go  iota.go  iterator.go  json.go  log.go  map.go  method.go  mutex.go  panic_recover.go  pointer.go  print.go  rand.go  range.go  rate_limit.go  (+22 more)
src/graph/: 100_dfs.py  101-bfs.py  101_dfs.py  102-bfs.ts  103-dfs.cc  99_dfs.py  km106.cc
src/greedy/: README.md  lc1005.cc  lc122.cc  lc134.cc  lc135.cc  lc376.cc  lc406.ts  lc45.cc  lc455.ts  lc53.cc  lc55.cc  lc860.cc
src/hash/: lc1.cc  lc15.cc  lc202.cc  lc242.cc  lc349.cc  lc350.ts  lc383.cc  lc438.go  lc438.ts  lc454.cc  lc49.go  lc49.ts
src/hash-map/: lc15.cc  lc18.cc
src/heap/: heap.cpp  heap.ts  lc295.cc  lc480.cc  main.cc  main.py
src/hot100/: lc128.ts  lc263.cc  lc406.ts  lc621.ts
src/js/: 190.js  258.js  263.js  268.js  290.js  apply-call-bind.js  closure.js  compose.js  concurrent.js  curry.js  debounce-throttle.js  debounce_throttle.js  decorator.ts  deep-clone.js  deep_clone.js  event_bus.js  event_loop.js  event_loop2.js  extends.js  flat.js  img.js  index.html  index.js  instanceof.js  iterator.js  load.js  map-reduce.js  miHoYo.js  new.js  promise.js  reduce_map_filter_some.js  retry.js  sleep.js  template_str.js  timer.js  timer2.js  xhr.js
src/knapsack/: 01.ts
src/languages/: deep-clone.js
src/lcs/: longest-common-subsequence.ts  longest_common_subsequence.ts
src/list/: get-intersection-node.cc  lc142.cc  lc19.cc  lc203.cc  lc206.cc  lc24.cc  lc707.cc
src/mono-stack/: lc42.py  lc739.cc  lc84.ts  lc85.ts
src/monotone-stack/: lc503.cpp
src/prefix-sum/: lc1590.cc  lc304.ts  lc3381.ts
src/py/: main.py
src/quick-sort/: main.cc  main.cpp  main.ts  quick-sort.ts
src/seg-tree/: main.cc
src/segment-tree/: lc3454.ts  (+1 more)
vite/: client.d.ts  vite.config.ts
webpack/: webpack.config.js  webpack.dev.js  webpack.prod.js
(+240 files in other folders)
