[project]
authors = [
  {name = "Tiancheng", email = "yukino161043261@gmail.com"},
]
dependencies = []
description = ""
name = "algorithm"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
