[project]
dependencies = [
    "cython>=3.2.4",
]
description = "Algorithms implemented by JS/TS/C++/Python"
name = "algorithm"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "ruff>=0.14.3",
  "requests>=2.25.1",
  "beautifulsoup4>=4.9.3",
  "lxml>=4.6.3",
  "types-beautifulsoup4>=4.12.0.20250516",
  "types-requests>=2.32.4.20260107",
]
